--- a/.github/workflows/scan.yml
+++ b/.github/workflows/scan.yml
@@ -29,3 +29,12 @@ jobs:
           SMTP_SERVER: ${{ secrets.SMTP_SERVER }}
           SMTP_PORT: ${{ secrets.SMTP_PORT }}
         run: python script.py
+
+      - name: Commit flights.csv
+        run: |
+          git config --global user.name "github-actions"
+          git config --global user.email "github-actions@github.com"
+          git add flights.csv
+          git commit -m "Update flights.csv" || echo "No changes"
+          git push
+
